--- a/src/app/personnels/manager-system/manager-system.component.html
+++ b/src/app/personnels/manager-system/manager-system.component.html
@@ -1,3 +1,9 @@
 <p>
   manager-system works!
 </p>
+<button (click)="getData(input.value)">getData</button>
+<input type="number" ngModel #input>
+
+
+<Button (click)="save()">Save</Button>
+{{(str)}}
